# KTPM

./: Document liên quan.docx  README.md
Demo/: ChuTro.cs  DSNguoiThue.cs  Sinhvien.cs
Demo/AppTiengTrung123/: local.properties
Demo/BlueBird-Movies-main/: package-lock.json  package.json
Demo/SQL/: csdl.sql  deomo.sql
Demo/adhf/: checkout.php
Lab1/: HĐ1.xls  HĐ2.xls
Lab1.2/: Login and Sign up.xls
Lab2.2/: BaoCao.docx  BaoCao_DACN.docx  Document liên quan.docx  PTVTKPM.docx  SIS - Software Engineering and Testing.docx  Tiểu luận.docx  điểm danh.txt
Lab2.2/Code/: BaoCao_DACN.docx  Báo cáo chính thức.docx  Untitled Diagram.drawio
Lab2.2/Kiểm thử phần mềm/: BaoCao.docx  Source Code.txt
Lab2/Calculator/: Calculator.sln
Lab2/UnitTestCalLib/: UnitTestCalLib.sln
Lab3/: App_test.js  BIỂU ĐỒ CỘT.docx  Hotel.cs  Testfor_game.cs  Testfor_game.js  test.cs
Lab3/App_TMDT-main/: pubspec.yaml
Lab3/appxemphim/: README.md  pubspec.yaml
Lab4/: Pie Chart 1.docx
LocalEdu_App/: Dockerfile  LocalEdu_App.http  LocalEdu_App.sln  Program.cs  Seed.cs  appsettings.json  deployment.yaml
LocalEdu_App/AutoMapper/: MappingProfiles.cs
LocalEdu_App/Controllers/: AccountController.cs  AppUserController.cs  PartController.cs  PartTypeController.cs  TopicController.cs  UserProgressController.cs
LocalEdu_App/Data/: DataContext.cs
LocalEdu_App/Dto/: AppUserDto.cs  (+4 more)
hitorit/: CMakeLists.txt  Doxyfile
hitorit/include/HitoriGenerator/: BinaryBoard.h  Common.h  ComplexBoard.h  EnforceList.h  ForbiddenList.h  Handler.h  HitoriBoard.h  NumBoard.h  Pipeline.h  TestBoard.h  ValueList.h
hitorit/src/: Program.cpp  Tests.cpp  _main.cpp
hitorit/src/HitoriGenerator/: BinaryBoard.cpp  Common.cpp  ComplexBoard.cpp  EnforceList.cpp  ForbiddenList.cpp  HitoriBoard.cpp  NumBoard.cpp  TestBoard.cpp  ValueList.cpp
yami-ai/: yami-ai.sln
(+103 files in other folders)
